Show all groups together in account groups page

--- a/ODK.Web.Razor/Pages/Account/Groups.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Groups.cshtml
@@ -33,86 +33,46 @@
                                 <th class="tcol-narrow"></th>
                             </tr>
                         </thead>
-                        @if (viewModel.Owned.Count > 0)
-                        {
-                            <tbody>
-                                @foreach (var chapter in viewModel.Owned)
-                                {
-                                    <tr>
-                                        <td>
-                                            <a href="@OdkRoutes.Groups.Group(Model.Platform, chapter.Chapter)">
-                                                @chapter.Chapter.GetDisplayName(Model.Platform)
-                                            </a>
-                                        </td>
-                                        <td>
+                        <tbody>
+                            @foreach (var chapter in viewModel.All)
+                            {
+                                <tr>
+                                    <td>
+                                        <a href="@OdkRoutes.Groups.Group(Model.Platform, chapter.Chapter)">
+                                            @chapter.Chapter.GetDisplayName(Model.Platform)
+                                        </a>
+                                    </td>
+                                    <td>
+                                        @if (chapter.IsAdmin)
+                                        {
                                             <a href="@OdkRoutes.MemberGroups.Group(Model.Platform, chapter.Chapter)">
                                                 @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Settings))
                                                 <span>Manage</span>
                                             </a>
-                                        </td>
-                                        <td>
+                                        }                                        
+                                    </td>
+                                    <td>
+                                        @if (chapter.IsOwner)
+                                        {
                                             <span data-bs-toggle="tooltip" data-bs-title="Owner">
                                                 @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Star)
                                                 {
                                                     Class = "text-warning"
                                                 })
                                             </span>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        }
-                        @if (viewModel.Admin.Count > 0)
-                        {
-                            <tbody>
-                                @foreach (var chapter in viewModel.Admin)
-                                {
-                                    <tr>
-                                        <td>
-                                            <a href="@OdkRoutes.Groups.Group(Model.Platform, chapter.Chapter)">
-                                                @chapter.Chapter.GetDisplayName(Model.Platform)
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <a href="@OdkRoutes.MemberGroups.Group(Model.Platform, chapter.Chapter)">
-                                                @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Settings))
-                                                <span>Manage</span>
-                                            </a>
-                                        </td>
-                                        <td>
+                                        }
+                                        else
+                                        {
                                             <form method="post" action="/groups/@chapter.Chapter.Id/leave">
                                                 <button class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to leave this group?');">
                                                     Leave
                                                 </button>
                                             </form>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        }
-                        @if (viewModel.Member.Count > 0)
-                        {
-                            <tbody>
-                                @foreach (var chapter in viewModel.Member)
-                                {
-                                    <tr>
-                                        <td>
-                                            <a href="@OdkRoutes.Groups.Group(Model.Platform, chapter.Chapter)">
-                                                @chapter.Chapter.GetDisplayName(Model.Platform)
-                                            </a>
-                                        </td>
-                                        <td></td>
-                                        <td>
-                                            <form method="post" action="/groups/@chapter.Chapter.Id/leave">
-                                                <button class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to leave this group?');">
-                                                    Leave
-                                                </button>
-                                            </form>
-                                        </td>
-                                    </tr>
-                                }
-                            </tbody>
-                        }
+                                        }
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>                        
                     </table>
                 </div>
             </div>
