Use login form styling for forgotten password

--- a/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
@@ -2,24 +2,24 @@
 @using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Account
+@using ODK.Web.Razor.Models.Login
 @model ForgottenPasswordModel
 @{
     Layout = "_AccountLayout";
     Model.Title = "Forgotten password";
 }
 
-@await Html.PartialAsync("Components/_Body", new BodyViewModel
+@await Html.PartialAsync("Account/_LoginBody", new LoginBodyViewModel
 {
     Title = "Forgotten password",
     Breadcrumbs = new[]
     {
-        new MenuItem { Link = "/account/login", Text = "Login" },
-        new MenuItem { Text = "Forgotten password" }
+        new MenuItem 
+        { 
+            Icon = IconType.ArrowLeft,
+            Link = "/account/login", 
+            Text = "Back to login" 
+        }
     },
-    ContentFunc = 
-        @<div class="row">
-            <div class="col-lg-6">
-                @await Html.PartialAsync("Account/_ForgottenPasswordForm", new ForgottenPasswordFormViewModel())
-            </div>
-        </div>
+    Content = await Html.PartialAsync("Account/_ForgottenPasswordForm", new ForgottenPasswordFormViewModel())
 })
