Add platform title to site email settings

--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsContent.cshtml
@@ -16,6 +16,7 @@
             ContactEmailAddress = settings.ContactEmailAddress,
             FromEmailAddress = settings.FromEmailAddress,
             FromEmailName = settings.FromName,
+            PlatformTitle = settings.PlatformTitle,
             Title = settings.Title
         })
         <button class="btn btn-primary" type="submit">Update</button>
