--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailSettingsForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailSettingsForm.cshtml
@@ -26,3 +26,9 @@
     @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
     @Html.ValidationMessageFor(x => x.Title)
 </div>
+
+<div class="form-group mb-3">
+    @Html.LabelFor(x => x.PlatformTitle)
+    @Html.TextBoxFor(x => x.PlatformTitle, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.PlatformTitle)
+</div>
