--- a/ODK.Web.Razor/Views/Shared/Events/_EventSidebar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventSidebar.cshtml
@@ -50,6 +50,7 @@
                 ChapterPaymentSettings = Model.ChapterPaymentSettings,
                 CurrentMemberId = Model.CurrentMember.Id,
                 Event = Model.Event,
+                Platform = Model.Platform,
                 TicketPurchases = Model.TicketPurchases,
                 TicketsLeft = Model.SpacesLeft
             })            
