--- a/ODK.Web.Razor/Views/Shared/Events/_EventTicketPurchase.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventTicketPurchase.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Core.Utils
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Events
 @using ODK.Web.Razor.Models.Payments
 @model EventTicketPurchaseViewModel
@@ -102,10 +103,20 @@
                         </div>
                     </div>
 
-                    <button class="btn btn-primary mr-1"
-                            data-bs-toggle="modal" data-bs-target="#@modalId">
-                        Pay deposit
-                    </button>
+                    @if (Model.ChapterPaymentSettings?.UseSitePaymentProvider == true)
+                    {
+                        <a class="btn btn-primary"
+                           href="@OdkRoutes.Groups.EventCheckout(Model.Platform, Model.Chapter, Model.Event.Id)">
+                            Pay deposit
+                        </a>
+                    }            
+                    else
+                    {
+                        <button class="btn btn-primary"
+                                data-bs-toggle="modal" data-bs-target="#@modalId">
+                            Pay deposit
+                        </button>
+                    }
 
                     @await Html.PartialAsync("Payments/_PaymentModal", new PaymentModalViewModel
                     {
