--- a/ODK.Web.Razor/Views/Shared/Home/_ChaptersSection.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Home/_ChaptersSection.cshtml
@@ -20,8 +20,7 @@
 
     var chapterDictionary = Model
         .Chapters
-        .Where(x => x.CountryId != null)
-        .GroupBy(x => countryContinentDictionary[x.CountryId!.Value])
+        .GroupBy(x => countryContinentDictionary[x.CountryId])
         .ToDictionary(x => x.Key, x => x.OrderBy(y => y.Name).ToArray());
 }
 
