--- a/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
@@ -9,10 +9,8 @@
 @{
     Layout = "_HomeLayout";
 
-    var chapter = await Model.RequestStore.GetChapter();
-
     var viewModel = await EventViewModelService.GetEventPageViewModel(
-        Model.ServiceRequest, Model.CurrentMemberIdOrDefault, chapter, Model.EventId);
+        Model.ServiceRequest, Model.CurrentMemberIdOrDefault, Model.Chapter, Model.EventId);
 
     Model.Title = $"{viewModel.Event.GetDisplayName()} | {viewModel.Chapter.GetDisplayName(Model.Platform)}";
 }
