--- a/ODK.Web.Razor/Pages/Groups/Join.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Join.cshtml
@@ -10,7 +10,7 @@
     Layout = "_HomeLayout";
 
     var viewModel = await ChapterViewModelService.GetGroupJoinPage(
-        Model.ServiceRequest, Model.CurrentMemberIdOrDefault, Model.Slug);
+        Model.ServiceRequest, Model.CurrentMemberIdOrDefault, Model.Chapter);
 
     Model.Title = $"Join | {viewModel.Chapter.GetDisplayName(Model.Platform)}";
 }
