--- a/ODK.Web.Razor/Pages/Groups/Profile/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Profile/Index.cshtml
@@ -9,7 +9,8 @@
 @{
     Layout = "_HomeLayout";
 
-    var viewModel = await ChapterViewModelService.GetGroupProfilePage(Model.MemberServiceRequest, Model.Slug);
+    var viewModel = await ChapterViewModelService.GetGroupProfilePage(
+        Model.MemberServiceRequest, Model.Chapter);
 
     Model.Title = $"Profile | {viewModel.Chapter.GetDisplayName(Model.Platform)}";
 }
