--- a/ODK.Web.Razor/Pages/Groups/Subscription/Checkout.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Subscription/Checkout.cshtml
@@ -11,7 +11,7 @@
     Layout = "_HomeLayout";
 
     var group = await ChapterViewModelService.GetGroupPage(
-        Model.ServiceRequest, Model.CurrentMemberIdOrDefault, Model.Slug);
+        Model.ServiceRequest, Model.CurrentMemberIdOrDefault, Model.Chapter);
 
     var request = Model.CreateMemberChapterServiceRequest(group.Chapter.Id);
     var returnUrl = "";
