--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventContent.cshtml
@@ -38,6 +38,7 @@
     {
         AttendeeLimit = Model.Event.AttendeeLimit,
         Chapter = Model.Chapter,
+        Currency = Model.Currency,
         Date = Model.Event.ToLocalTime(Model.Chapter.TimeZone),
         Description = Model.Event.Description,
         EndTime = TimeSpanUtils.ToString(Model.Event.EndTime),
@@ -46,7 +47,6 @@
         ImageUrl = Model.Event.ImageUrl,
         Name = Model.Event.Name,
         OwnerSubscription = Model.OwnerSubscription,
-        PaymentSettings = Model.PaymentSettings,
         Platform = Model.Platform,
         Public = Model.Event.IsPublic,
         RsvpDeadline = Model.Event.RsvpDeadlineUtc != null 
