--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventForm.cshtml
@@ -122,7 +122,7 @@
         <span class="ms-1 text-muted">The total ticket cost for this event. Set the max number of attendees above to set the number of tickets.</span>
         <div class="input-group">
             <span class="input-group-text">
-                @Model.PaymentSettings.Currency.Symbol
+                @Model.Currency.Symbol
             </span>
             @Html.TextBoxFor(x => x.TicketCost, format: "{0:0.00}", new { @class = "form-control", Type = "number" })
         </div>
@@ -134,7 +134,7 @@
         <span class="ms-1 text-muted">The deposit cost for this event. Members who pay a deposit will then only need to pay the remainder of the total cost.</span>
         <div class="input-group">
             <span class="input-group-text">
-                @Model.PaymentSettings.Currency.Symbol
+                @Model.Currency.Symbol
             </span>
             @Html.TextBoxFor(x => x.TicketDepositCost, format: "{0:0.00}", new { @class = "form-control", type = "number", step = 0.5 })
         </div>
