--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -27,12 +27,12 @@
         @await Html.PartialAsync("Admin/Events/Event/_EventForm", new EventFormViewModel
         {
             Chapter = Model.Chapter,
+            Currency = Model.Currency,
             Date = Model.Date,
             Description = Model.EventSettings?.DefaultDescription,
             EndTime = TimeSpanUtils.ToString(Model.EventSettings?.DefaultEndTime),
             HostOptions = hostOptions,
             OwnerSubscription = Model.OwnerSubscription,
-            PaymentSettings = Model.PaymentSettings,
             Platform = Model.Platform,
             Venue = Model.VenueId ?? default,
             Venues = Model.Venues
