--- a/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
@@ -36,10 +36,10 @@
     {
         @await Html.PartialAsync("Payments/_PaymentScripts", new PaymentScriptsViewModel
         {
-            ApiPublicKey = viewModel.ChapterPaymentSettings.ApiPublicKey ?? "",
-            CurrencyCode = viewModel.ChapterPaymentSettings.Currency.Code,
+            ApiPublicKey = viewModel.ChapterPaymentSettings?.ApiPublicKey ?? "",
+            CurrencyCode = viewModel.Event.TicketSettings.Currency.Code,
             IsSubscription = false,
-            Provider = viewModel.ChapterPaymentSettings.Provider ?? default
+            Provider = viewModel.ChapterPaymentSettings?.Provider ?? default
         })
     }
 }
