--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionForm.cshtml
@@ -23,7 +23,7 @@
         @Html.LabelFor(x => x.Amount, new { @class = "form-label" })
         <div class="input-group">
             <span class="input-group-text">
-                @Model.PaymentSettings.Currency.Symbol
+                @Model.Currency.Symbol
             </span>
             @Html.TextBoxFor(x => x.Amount, new { @class = "form-control", type = "number", min = 0, step = 0.5 })
         </div>
@@ -55,7 +55,7 @@ else if (Model.Amount != null)
     <div class="form-group mb-3">
         @Html.HiddenFor(x => x.Amount)
         @Html.LabelFor(x => x.Amount, new { @class = "form-label" })
-        <input type="text" readonly class="form-control-plaintext" value="@Model.PaymentSettings.Currency.ToAmountString((decimal)Model.Amount.Value)" />
+        <input type="text" readonly class="form-control-plaintext" value="@Model.Currency.ToAmountString((decimal)Model.Amount.Value)" />
     </div>
 
     <div class="form-group mb-3">
