--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MembersContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MembersContent.cshtml
@@ -89,7 +89,7 @@
     <table class="table" data-sortable id="members-table" data-table-striped>
         <thead>
             <tr>
-                <th></th>
+                <th class="tcol-narrow"></th>
                 <th data-sortable-sort="default">Name</th>
                 <th data-sortable-sort>Type</th>
                 <th data-sortable-sort>Expires</th>
@@ -107,12 +107,12 @@
                 <tr data-filter-name="@member.FullName"
                     data-filter-type="@(subscription?.Type ?? SubscriptionType.Full)"
                     data-filter-status="@status">
-                    <td width="30px" class="px-0">
+                    <td>
                         @await Html.PartialAsync("Members/_MemberAvatar", new MemberAvatarViewModel
                         {
                             Member = member,
-                                        MaxWidth = 30
-                                        })
+                            Width = 30
+                        })
                 </td>
                 <td>
                     <a href="@OdkRoutes.MemberGroups.Member(Model.Platform, Model.Chapter, member.Id)" data-sort-value="@member.FullName">
