--- a/ODK.Web.Razor/Views/Shared/Events/_EventSidebar.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventSidebar.cshtml
@@ -46,12 +46,13 @@
         {
             @await Html.PartialAsync("Events/_EventTicketPurchase", new EventTicketPurchaseViewModel
             {
+                AmountPaid = Model.AmountPaid,
+                AmountRemaining = Model.AmountRemaining,
                 Chapter = Model.Chapter,
                 ChapterPaymentSettings = Model.ChapterPaymentSettings,
                 CurrentMemberId = Model.CurrentMember.Id,
                 Event = Model.Event,
                 Platform = Model.Platform,
-                TicketPurchases = Model.TicketPurchases,
                 TicketsLeft = Model.SpacesLeft
             })            
         }
